<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NGAJ</string>
    <string name="action_settings">Calibrate Pedometer</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_results">Results</string>
    <string name="time">Time</string>
    <string name="startTime">00:00:00</string>
    <string name="timeFormat">hh:mm:ss</string>
    <string name="Steps">Total Steps: 0</string>
    <string name="distance">Distance (Km)</string>
    <string name="startDistance">0.00</string>
    <string name="distanceFormat">Km</string>
    <string name="speed">Speed(km/h)</string>
    <string name="startSpeed">00.0</string>
    <string name="speedFormat">0.00 avg 0.00 max</string>
    <string name="steps">Steps:</string>
    <string name="startSteps">0</string>
    <string name="Start">Start</string>
    <string name="Camera">Camera</string>
    <string name="ViewStats">Stats</string>
    <string name="ViewTracks">Tracks</string>
    <string name="Text">Well Done! You have finished this session.</string>
    <string name="title_activity_stats">Stats</string>
    <string name="title_activity_tracks">Tracks</string>
    <string name="Image">Image Description</string>
    <string name="Medal">Track Rank: Bronze (125 Points)</string>
    <string name="title_activity_level_up">LevelUp</string>
    <string name="LevelUp">Well Done! \nYou have raised one level up!\nYour current level is : 3 (Skilled)</string>
    <string name="CameraLand">Ca</string>
    <string name="txtCalibration">Waiting to start . . .</string>
    <string name="title_activity_calibrate_pedometer">CalibratePedometer</string>
    <string name="Calibrate">To calibrate pedometer:\n   -Press Start Button\n   -Put phone in your pocket\n   -Wait for the beep sound\n   -Walk/Runn 10 steps\n   -Press Volume Up or Down button\n   -You will hear a confirmation beep sound\n   -Take phone from pocket\n   -See calibration result.</string>
    <string name="btncalibrate">Start Calibration</string>

</resources>
