<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    <fragment 
 		android:id="@+id/mapview"
  	    android:name="com.google.android.gms.maps.MapFragment"
  	    class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/statisticsr1"
        android:layout_alignParentTop="true"
        android:layout_marginTop="37dp"
        android:clickable="true" />
    

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/statisticsr1"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/btnCamera"
        android:text="@string/Start"
        android:onClick="startRecording"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btnTracks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnStart"
        android:layout_alignLeft="@+id/btnStart"
        android:text="@string/ViewTracks"
        android:onClick="viewTracks"
        android:textColor="#FFFFFF"  />

    <LinearLayout
        android:id="@+id/statisticsr2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnStats"
        android:layout_alignRight="@+id/btnCamera"
        android:orientation="horizontal"
        android:baselineAligned="false"
         >

        <LinearLayout
            android:id="@+id/speedlayout"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:layout_marginTop="2dp"
            android:background="#C0C0C0"
            android:orientation="vertical" >

             <TextView
                 android:id="@+id/speed1"
                android:layout_width="match_parent"
                android:gravity="center" 
                 android:layout_height="wrap_content"
                 android:text="@string/speed" />

            <TextView
                android:id="@+id/speed2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/startSpeed"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/speed3"
                android:layout_width="match_parent"
                android:gravity="center" 
                android:layout_height="wrap_content"
                android:text="@string/speedFormat" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/stepslayout"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:background="#C0C0C0"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/steps1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/steps" />

            <TextView
                android:id="@+id/steps2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/startSteps"
                android:textSize="24sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/statisticsr1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/statisticsr2"
        android:layout_alignLeft="@+id/statisticsr2"
        android:orientation="horizontal"
        android:baselineAligned="false"
		>

        <LinearLayout
            android:id="@+id/timelayout"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:layout_marginTop="2dp"
            android:orientation="vertical"
            android:background="#C0C0C0" >

            <TextView
                android:id="@+id/time1"
                android:layout_width="match_parent"
                android:gravity="center" 
                android:layout_height="wrap_content"
                android:text="@string/time" />

            <TextView
                android:id="@+id/time2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/startTime"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/distancelayout"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:background="#C0C0C0"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/distance1"
                android:layout_width="match_parent"
                android:gravity="center" 
                android:layout_height="wrap_content"
                android:text="@string/distance" />

            <TextView
                android:id="@+id/distance2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/startDistance"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnStats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnStart"
        android:layout_toLeftOf="@+id/btnCamera"
        android:layout_toRightOf="@+id/btnTracks"
        android:text="@string/ViewStats"
        android:onClick="statsClick"
        android:textColor="#FFFFFF"  />

    <ImageView
        android:id="@+id/CurrentLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/mapview"
        android:paddingRight="5dp"
        android:src="@drawable/one"
        android:contentDescription="@string/Image" />

    <Button
        android:id="@+id/btnCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/mapview"
        android:layout_below="@+id/statisticsr2"
        android:text="@string/Camera"
        android:onClick="cameraClick"
        android:textColor="#FFFFFF"  />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/CurrentLevel"
        android:layout_alignTop="@+id/CurrentLevel"
        android:layout_toLeftOf="@+id/NextLevel"
        android:layout_toRightOf="@+id/CurrentLevel"
        android:indeterminate="false"
        android:max="1000"
        android:paddingBottom="10dp"
        android:paddingTop="5dp"
        android:progress="500"
        android:progressDrawable="@drawable/progressbarstyle" />

    <ImageView
        android:id="@+id/NextLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/mapview"
        android:layout_alignTop="@+id/progressBar1"
        android:paddingLeft="5dp"
        android:src="@drawable/two"
        android:contentDescription="@string/Image" />

</RelativeLayout>