<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Results" >

    <RelativeLayout
        android:id="@+id/Layout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearbar2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" >

        <ProgressBar
            android:id="@+id/rprogressBar1"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true" />

        <TextView
            android:id="@+id/rhelloworld"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/Text" />

        <LinearLayout
            android:id="@+id/rstatisticsr2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/rspeedlayout"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:layout_marginTop="2dp"
                android:background="#FFFFFF"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/rspeed1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/speed" />

                <TextView
                    android:id="@+id/rspeed2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/startSpeed"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/rspeed3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/speedFormat" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/rstepslayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/rsteps1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/steps" />

                <TextView
                    android:id="@+id/rsteps2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/startSteps"
                    android:textSize="24sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rstatisticsr1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/rstatisticsr2"
            android:layout_alignParentLeft="true"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/rtimelayout"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:layout_marginTop="2dp"
                android:background="#FFFFFF"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/rtime1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/time" />

                <TextView
                    android:id="@+id/rtime2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/startTime"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/rdistancelayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:background="#FFFFFF"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/rdistance1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/distance" />

                <TextView
                    android:id="@+id/rdistance2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/startDistance"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

        <org.osmdroid.views.MapView
            android:id="@+id/rmapview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/rstatisticsr1"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/rhelloworld"
            android:clickable="true" >

        </org.osmdroid.views.MapView>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearbar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearbar2"
        android:layout_alignLeft="@+id/Layout2"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/Layout2"
        android:orientation="horizontal"
        android:gravity="center" >

    </LinearLayout>
  
</RelativeLayout>